--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,7 @@
 [pytest]
 log_cli = 1
 log_level=INFO
-;log_format = %(levelname)-10s %(asctime)s %(funcName)s: %(message)s
-;log_date_format = %Y-%m-%d %H:%M:%S
+
+allure.console_errors_to_step = false
+
+addopts = --alluredir=tmp --clean-alluredir -s -v
