Fixes typing across all files

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,6 @@ max-complexity = 8
 
 [pylint.MASTER]
 init-hook='import sys; sys.path.append("F:\\Workstation\\Z\\Python\\OTUS\\playwright-test")'
+
+[mypy]
+mypy_path = F:\\Workstation\\Z\\Python\\OTUS\\playwright-test
